ags (0.7.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-count-beats recall to ommit tics
	* fixed timing issue of toplevel AgsThread limit nanosleep() to band
	* fixed missing read of config values in ags_soundcard_thread() to calculate its frequency
	* improved ref/unref AgsAudioSignal because it wasn't properly done
	* modified ags_recall_recycling.c to not cache AgsAudioSignal
	* modified default frequency to 1000 Hz and buffer size of 512

ags (0.7.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock caused by adjusting buffer size or samplerate as reading config from file
	* fixed really bad memory leak during playback of audio signal on AgsInput because of missing g_object_unref()
	* fixed ags_notation_test.c - it crashed because of wrong data type for ags_note_new_with_offset()
	* implemented properties of AgsNote

ags (0.7.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ommiting delayed playback in ags_play_notation_audio_run.c
	* fixed crash during load of lv2 directories without manifest.ttl
	* fixed don't queue draw destroyed widgets
	* fixed remove audio from soundcard as destroying AgsMachine
	* fixed crash during playback after destroy of AgsMachine NOTE: see below
	* NOTE: you have to do proper clean the audio tree

ags (0.7.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed zero-length notes in ags_note_duplicate() and return NULL
	* fixed negative-length notes in ags_note_duplicate() by swapping x values
	* fixed encoding special char of strings in ags_turtle.c
	* fixed AgsNotebook fixed width to resizeable
	* fixed use of previous value on reenter loop in automation
	* improved regexp to read string literals in ags_turtle.c
	* improved AgsLineMember and AgsBulkMember to escape their strings
	* implemented resize of AgsNotebook previously it was fixed size