@@ -37,8 +37,8 @@
 #define AGS_SOUNDCARD_DEFAULT_PCM_CHANNELS (2)
 #define AGS_SOUNDCARD_DEFAULT_SAMPLERATE (44100.0)
 #define AGS_SOUNDCARD_DEFAULT_FORMAT (AGS_SOUNDCARD_RESOLUTION_16_BIT)
-#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (256)
-#define AGS_SOUNDCARD_DEFAULT_DEVICE "hw:2,0\0"
+#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (944)
+#define AGS_SOUNDCARD_DEFAULT_DEVICE "hw:0,0\0"
 #define AGS_SOUNDCARD_DEFAULT_BPM (120.0)
 #define AGS_SOUNDCARD_DEFAULT_DELAY_FACTOR (1.0 / 4.0)
 #define AGS_SOUNDCARD_DEFAULT_JIFFIE ((double) AGS_SOUNDCARD_DEFAULT_SAMPLERATE / (double) AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE)
